--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npx tailwindcss -i ./public/assets/input.css -o ./public/assets/output.css --watch"
+    "build-css": "npx tailwindcss -i ./public/assets/input.css -o ./public/assets/output.css --watch"
   },
   "keywords": [],
   "author": "",
